# polymarket-mm-bot

./: .env.example  .gitignore  Dockerfile  README.md  api.py  bot.py  builder.py  builder_auth.py  builder_rewards.py  config.py  hedger.py  pyproject.toml  quoter.py  rewards.py  risk.py  scanner.py
.github/workflows/: ci.yml
bot/: builder_auth.py  builder_rewards.py
tests/: test_api_auth.py  test_builder_auth.py  test_builder_rewards.py  test_quoter.py  test_risk.py  test_scanner.py
